# KeyTrialPro

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
apps/admin-web/: index.html  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/admin-web/src/: App.tsx  api.ts  main.tsx  mockData.ts  types.ts
apps/php-api/: .env.example
apps/php-api/public/: index.php
apps/php-api/scripts/: aggregate_daily_stats.php
deploy/: docker-compose.yml
deploy/mysql/: 2026-05-12-license-activation-duration.sql  2026-05-21-license-admin-columns.sql  2026-05-21-license-notes.sql  schema.sql
deploy/nginx/: keytrialpro.conf
deploy/php-fpm/: www.conf
deploy/redis/: redis.conf
docs/: deploy_ubuntu_baota.md  production-update-license-expiry-baota.md
docs/api/: endpoints.md
docs/architecture/: dashboard-metrics.md  operations.md  system-design.md
docs/sdk/: csharp-dll-integration-playbook.md  integration.md  native-abi.md
docs/security/: model.md
native/win32-core-dll/: CMakeLists.txt  README.md
native/win32-core-dll/include/: keytrialpro_sdk.h
native/win32-core-dll/src/: keytrialpro_sdk.cpp
scripts/: local_https_proxy.py  setup-local-https.ps1
scripts/local-cert-tool/: Program.cs
scripts/local-https-proxy/: Program.cs
sdk/csharp/: README.md
sdk/csharp/KeyTrialPro.Sdk/: KeyTrialClient.cs  KeyTrialPro.Sdk.csproj  NativeMethods.cs
sdk/csharp/KeyTrialPro.SmokeTest/: KeyTrialPro.SmokeTest.csproj  Program.cs
sdk/csharp/KeyTrialPro.WinFormsTester/: KeyTrialPro.WinFormsTester.sln  (+3 more)
sdk/e32/: README.md
sdk/python/: README.md  pyproject.toml  test_license.py
(+80 files in other folders)
